--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html lang="en">
 
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>LBMS Login</title>
+	<link rel="stylesheet" href="./css/login.css" />
+</head>
+
+<body>
+	<div class="container">
+		<div class="form" id="login">
+			<h2 class="form__title">Login</h2>
+			<div class="form__input-group">
+				<input type="text" class="form__input" autofocus placeholder="Enter username" id="usernameInput" />
+				<div class="padding"></div>
+			</div>
+			<div class="form__input-group">
+				<input type="password" class="form__input" autofocus placeholder="Enter password" id="passwordInput" />
+				<div class="padding"></div>
+				<div class="padding"></div>
+				<a href="#"><button class="form__button" id="loginButton">Login</button></a>
+				<div class="padding"></div>
+				<div class="padding"></div>
+				<a href="#"><button class="form__button" id="loginButton">Go Home</button></a>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
