--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
 	<title>Bootstrap demo</title>
 	<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
 	<link rel="stylesheet" th:href="@{css/index.css}" />
-	<!-- Option 1: Include in HTML -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 </head>
 
@@ -32,7 +31,7 @@
 			</div>
 			<div class="col-md-4 d-flex text-center text-md-right align-items-center">
 				<div class="justify-content-md-end">
-					<a href="#" class="btn btn-width mr-2 mb-2 mb-md-0">Register</a>
+					<a class="btn btn-width mr-2 mb-2 mb-md-0">Register</a>
 					<a href="#" class="btn btn-width mx-2 mb-2 mb-md-0">Login</a>
 				</div>
 			</div>
@@ -42,7 +41,10 @@
 	<main>
 		<div class="mx-5 mt-3 catalog text-center">
 			<div class="catalog-text">
-				<i class="bi bi-list"></i>
+				<img
+            th:src="@{/img/List.png}"
+            alt="List"
+            style="width: 47px; height: 49px" />
 				<p>BOOK'S CATALOG</p>
 			</div>
 		</div>
