--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -109,7 +109,7 @@
 								<td>
 									<div class="upload-btn-wrapper mt-2">
 										<button class="btn">Upload File...</button>
-										<input type="file" name="document" id="fileUpload" accept="image/png,image/jpeg"/>
+										<input type="file" name="document" id="fileUpload" accept="image/png,image/jpeg,application/pdf"/>
 									</div>
 								</td>
 								<!--Here-->
