--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Bootstrap demo</title>
+	<title>Library Managment System</title>
 	<link th:href="@{css/bootstrap.min.css}" rel="stylesheet" />
 	<link rel="stylesheet" th:href="@{css/index.css}" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
@@ -31,20 +31,22 @@
 			</div>
 			<div class="col-md-4 d-flex text-center text-md-right align-items-center">
 				<div class="justify-content-md-end">
-					<a class="btn btn-width mr-2 mb-2 mb-md-0">Register</a>
-					<a href="#" class="btn btn-width mx-2 mb-2 mb-md-0">Login</a>
+					<a th:href="@{/register}" class="btn btn-width mr-2 mb-2 mb-md-0">Register</a>
+					<a th:href="@{/login}" class="btn btn-width mx-2 mb-2 mb-md-0">Login</a>
 				</div>
 			</div>
 		</div>
 	</nav>
-
+	<div class="text-success">
+		<h2>[[${message}]]</h2>
+	</div>
+	<div class="text-danger">
+		<h2>[[${error}]]</h2>
+	</div>
 	<main>
 		<div class="mx-5 mt-3 catalog text-center">
 			<div class="catalog-text">
-				<img
-            th:src="@{/img/List.png}"
-            alt="List"
-            style="width: 47px; height: 49px" />
+				<img th:src="@{/img/List.png}" alt="List" style="width: 47px; height: 49px" />
 				<p>BOOK'S CATALOG</p>
 			</div>
 		</div>
@@ -54,39 +56,43 @@
 			<div class="row mx-4">
 				<div class="col-lg-9">
 					<form th:action="@{/filter}" method="post" th:object="${filter}">
-					<div class="row p-2 input-search d-flex justify-content-around">
-						
-							<div class="col-12 col-md-6 col-lg-3 mb-2">
-							<label for="category" class="text-center w-100">Category</label>
-							<select class="search-input-custom w-100" aria-label="Default select example" th:field="*{bookCategory}">
-								<option th:value="default" selected></option>
-								<option th:value="programming">Programming</option>
-								<option th:value="database">DataBase</option>
-								<option th:value="networking">Networking</option>
-								<option th:value="git">Git</option>
-								<option th:value="excel">Excel</option>
-							</select>
-						</div>
-						<div class="col-12 col-md-6 col-lg-3 mb-2">
-							<label for="author" class="text-center w-100">Author</label>
-							<input type="text" name="author" class="search-input-custom w-100" th:field="*{bookAuthor}"/>
-						</div>
-						<div class="col-12 col-md-6 col-lg-3 mb-2">
-							<label for="registrationNo" class="text-center w-100">RegistrationNo</label>
-							<input type="text" class="search-input-custom w-100" name="registrationNo" th:field="*{bookId}"/>
-						</div>
-						<div class="col-12 col-md-6 col-lg-3 mb-2">
-							<label for="bookName" class="text-center w-100">Book Name</label>
-							<input type="text" class="search-input-custom w-100" name="bookName" th:field="*{bookName}"/>
-						</div>
+						<div class="row p-2 input-search d-flex justify-content-around">
 
-						<div class="col-12 d-flex justify-content-end align-items-end mb-2">
-							<button class="search-button p-1 align-items-center">
-								Search
-							</button>
+							<div class="col-12 col-md-6 col-lg-3 mb-2">
+								<label for="category" class="text-center w-100">Category</label>
+								<select class="search-input-custom w-100" aria-label="Default select example"
+									th:field="*{bookCategory}">
+									<option th:value="default" selected></option>
+									<option th:value="programming">Programming</option>
+									<option th:value="database">DataBase</option>
+									<option th:value="networking">Networking</option>
+									<option th:value="git">Git</option>
+									<option th:value="excel">Excel</option>
+								</select>
+							</div>
+							<div class="col-12 col-md-6 col-lg-3 mb-2">
+								<label for="author" class="text-center w-100">Author</label>
+								<input type="text" name="author" class="search-input-custom w-100"
+									th:field="*{bookAuthor}" />
+							</div>
+							<div class="col-12 col-md-6 col-lg-3 mb-2">
+								<label for="registrationNo" class="text-center w-100">RegistrationNo</label>
+								<input type="text" class="search-input-custom w-100" name="registrationNo"
+									th:field="*{bookId}" />
+							</div>
+							<div class="col-12 col-md-6 col-lg-3 mb-2">
+								<label for="bookName" class="text-center w-100">Book Name</label>
+								<input type="text" class="search-input-custom w-100" name="bookName"
+									th:field="*{bookName}" />
+							</div>
+
+							<div class="col-12 d-flex justify-content-end align-items-end mb-2">
+								<button class="search-button p-1 align-items-center">
+									Search
+								</button>
+							</div>
+
 						</div>
-						
-					</div>
 					</form>
 					<div class="row">
 						<div class="col-12 col-sm-6 col-md-4 col-lg-4 p-3" th:each="book : ${bookList}">
@@ -104,8 +110,11 @@
 									<p>Registration No: <span th:text="${book.bookId}"></span></p>
 									<p>Produce Year: <span th:text="${book.produceYear}"></span></p>
 								</div>
+								<div class="text-center p-2">
+									<a href="#">Available</a>
+								</div>
 								<div class="text-center card-status p-2">
-									<a href="">Available</a>
+									<a th:href="@{/register}" class="btn mr-2 mb-2 mb-md-0">Update</a>
 								</div>
 							</div>
 						</div>
@@ -116,7 +125,7 @@
 					<div class="categories shadow">
 						<a th:href="@{/category?name=programming}">Programming</a>
 					</div>
-					<div class="categories"><a th:href="@{/category?name=db}">DataBase</a></div>
+					<div class="categories"><a th:href="@{/category?name=database}">DataBase</a></div>
 					<div class="categories"><a th:href="@{/category?name=git}">Git</a></div>
 					<div class="categories"><a th:href="@{/category?name=networking}">Networking</a></div>
 					<div class="categories"><a th:href="@{/category?name=excel}">Excel</a></div>
