--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>LBMS Login</title>
-	<link rel="stylesheet" th:href="@{css/login.css}"/>
+	<link rel="stylesheet" th:href="@{css/login.css}" />
 </head>
 
 <body>
 	<div class="container">
 		<div class="form" id="login">
+			<h2 class="form__title">Login</h2>
 			<!--Error Message!-->
 			<div th:if="${param.error}">
-					<div class="alert alert-danger">Invalid Username or Password</div>
-				</div>
-				<div th:if="${param.logout}">
-					<div class="alert alert-success">You have been logged out.</div>
-				</div>
-			<h2 class="form__title">Login</h2>
-			<div class="form__input-group">
-				<input type="text" class="form__input" autofocus placeholder="Enter username" id="usernameInput" />
-				<div class="padding"></div>
+				<div class="alert alert-danger">Invalid Username or Password</div>
 			</div>
-			<div class="form__input-group">
-				<input type="password" class="form__input" autofocus placeholder="Enter password" id="passwordInput" />
-				<div class="padding"></div>
-				<div class="padding"></div>
-				<a href="#"><button class="form__button" id="loginButton">Login</button></a>
-				<div class="padding"></div>
-				<div class="padding"></div>
-				<a href="#"><button class="form__button" id="loginButton">Go Home</button></a>
+			<div th:if="${param.logout}">
+				<div class="alert alert-success">You have been logged out.</div>
 			</div>
+			<form th:action="@{/login}" method="post">
+				<div class="form__input-group">
+					<input type="text" class="form__input" autofocus placeholder="Enter username" id="usernameInput" />
+					<div class="padding"></div>
+				</div>
+				<div class="form__input-group">
+					<input type="password" class="form__input" autofocus placeholder="Enter password"
+						id="passwordInput" />
+					<div class="padding"></div>
+					<div class="padding"></div>
+					<input class="form__button mt-5" type="submit" value="Login" id="loginButton"/>
+					<div class="padding"></div>
+					<div class="padding"></div>
+					<a th:href="@{/}"><button class="form__button" id="loginButton">Go Home</button></a>
+				</div>
+			</form>
 		</div>
 	</div>
 </body>
